# OpenFactory-AssetAPI

./: Dockerfile  README.md  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: routing_layer.yml  state_api.yml  stream_api_non_replicated.yml
app/: README.md  ServingLayer_AssetStreams.md  main.py
app/api/: asset_state.py  asset_stream.py
app/core/: config.py  kafka_consumer.py  kafka_dispatcher.py
dev_tools/virtual_assets/temp_sensor/: Dockerfile
docs/: devcontainer.md
routing_layer/: Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
routing_layer/app/: config.py  dependencies.py  main.py
routing_layer/app/api/: router_asset.py  router_asset_state.py
routing_layer/app/core/: proxy.py
routing_layer/app/core/controller/: deployment_platform.py  docker_deployment_platform.py  grouping_strategy.py  routing_controller.py  swarm_deployment_platform.py  unslevel_grouping_strategy.py
routing_layer/deployment/: controller_factory.py  deploy.py  teardown.py
state_api/: Dockerfile  README.md  config.py  docker-compose.yml  requirements.txt
stream_api/non_replicated/: Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt
stream_api/non_replicated/app/core/: kafka_dispatcher.py
